--- a/123.html
+++ b/123.html
@@ -6,6 +6,13 @@
 	<title>林若傑簡介</title>
 </head>
 <body>
-	
+	林若傑
+	Jo-Chieh Lin
+
+	個人網頁：https://www.pu.edu.tw/
+	IG：linrowjay	
+	Tel: 04-26328001#18110
+	E-Mail: a41135213@yahoo.com.tw
+
 </body>
 </html>
