--- a/123.html
+++ b/123.html
@@ -6,13 +6,13 @@
 	<title>林若傑簡介</title>
 </head>
 <body>
-	林若傑
-	Jo-Chieh Lin
+	<h1>林若傑</h1>
+	<h2>Jo-Chieh Lin</h2> 
 
-	個人網頁：https://www.pu.edu.tw/
-	IG：linrowjay	
-	Tel: 04-26328001#18110
-	E-Mail: a41135213@yahoo.com.tw
+	個人網頁：https://www.pu.edu.tw/<br>
+	IG：linrowjay	<br>
+	Tel: 04-26328001#18110<br>
+	E-Mail: a41135213@yahoo.com.tw<br>
 
 </body>
 </html>
