--- a/123.html
+++ b/123.html
@@ -9,10 +9,10 @@
 	<h1>林若傑</h1>
 	<h2>Jo-Chieh Lin</h2> 
 
-	個人網頁：https://www.pu.edu.tw/<br>
-	IG：linrowjay	<br>
-	Tel: 04-26328001#18110<br>
-	E-Mail: a41135213@yahoo.com.tw<br>
+	個人網頁：<a href="https://www.pu.edu.tw/">https://www.pu.edu.tw/</a><br>
+	IG：<a href="https://www.instagram.com/linrowjay/"target="_blank"> linrowjay	</a><br>
+	Tel: <a href="tel:0426328001,18110"> 04-26328001#18110</a><br>
+	E-Mail:<a href="mailto:a41135213@yahoo.com.tw"> a41135213@yahoo.com.tw</a><br>
 
 </body>
 </html>
