--- a/123.html
+++ b/123.html
@@ -6,13 +6,44 @@
 	<title>林若傑簡介</title>
 </head>
 <body>
+<table width="70%">
+		<tr>
+			<td>
+				<img src="cliff.jpg" width="110%"></img>
+			</td>
+
+			<td>
+
 	<h1>林若傑</h1>
 	<h2>Jo-Chieh Lin</h2> 
+			</td>
+		</tr>
+</table>
+<table width="70%" border="1">
+		<tr>
+			<td>
 
 	個人網頁：<a href="https://www.pu.edu.tw/">https://www.pu.edu.tw/</a><br>
 	IG：<a href="https://www.instagram.com/linrowjay/"target="_blank"> linrowjay	</a><br>
 	Tel: <a href="tel:0426328001,18110"> 04-26328001#18110</a><br>
 	E-Mail:<a href="mailto:a41135213@yahoo.com.tw"> a41135213@yahoo.com.tw</a><br>
+				</td>
+
+			<td>
+
+大象席地而坐電影配樂<br>
+	<audio controls>
+		<source src="elephant.mp3" type="audio/mP3">
+	</audio><br>
+			</td>
+
+			<td>
+
+	不要去臺灣<br>
+	<iframe src="https://www.youtube.com/embed/pW88QFpHXa8" allowfullscreen></iframe>
+			</td>
+		</tr>
+</table>		
 
 </body>
 </html>
